# QuantToolSuite

./: .gitignore  CMakeLists.txt  Finnhub.cpp  Finnhub.h  Main.qml  README.md  YFinance.js  alphavantage.cpp  alphavantage.h  finnhub.cpp  main.cpp  polygon.cpp  polygon.h  resources.qrc  test.h  ticker.cpp  ticker.h  yfinance.cpp  yfinance.h
TestingUI_2/: CMakeLists.txt  TestingUI_2.qmlproject  TestingUI_2.qmlproject.qtds  qds.cmake
TestingUI_2/App/autogen/: environment.h
TestingUI_2/Dependencies/Components/: ignore-in-qds
TestingUI_2/Dependencies/Components/examples/TransitionItem/: Screen07.ui.qml  TransitionItem.qml
TestingUI_2/Dependencies/Components/examples/TransitionItem/imports/TransitionItem/: EventListSimulator.qml
TestingUI_2/TestingUI_2/: CMakeLists.txt  Constants.qml  qmldir
TestingUI_2/TestingUI_2/designer/: plugin.metainfo
TestingUI_2/TestingUI_2Content/: App.qml  AutoHedge.ui.qml  CMakeLists.txt  Dashboard.ui.qml  Settings.ui.qml  StartScreen.ui.qml
